fix tenure patterns file

--- a/tenure_patterns.html
+++ b/tenure_patterns.html
@@ -240,14 +240,7 @@
 </div>
 </div>
 </div>
-<h3 class="heading4">How does the type of plan affect the permanence of members?</h3><p>The analysis of member tenure across various co-working space membership types reveals distinct patterns that tie directly to the nature of each plan. Office memberships boast the longest average tenure of approximately **12 months**, indicating that members value stability and a dedicated workspace considerably more than others. In stark contrast, Hot Desk members show the shortest average tenure of around **7 months**, reflective of their more transient engagement with the space, suggesting a lower commitment level and fewer ties to the community.</p><p>Interestingly, Virtual memberships record a surprising average tenure of about **13 months**, hinting at strong customer loyalty and the potential for meaningful interactions beyond physical presence. Overall, these findings underscore how the permanence associated with different membership types significantly affects member retention and engagement, with a clear correlation between the stability of the workspace and the duration of affiliation.</p>
-
-<h3 class="heading4"></h3><p>The analysis reveals a significant upward trend in member tenure within the flexible workspace sector from early 2016 to 2025, with the average tenure increasing from approximately 5 months to a peak nearing 15 months in March 2023. The data indicates notable spikes, particularly during 2023, signifying shifts in member loyalty and usage patterns, likely influenced by the evolving nature of work post-pandemic. Though fluctuations remain present, the overall trajectory shows that member retention is steadily improving, indicating a structural change in workspace dynamics.</p><p>When dissecting individual membership types, a similar pattern emerges, with substantial spikes in tenure across categories in March 2023. Notably, 'Virtual' memberships remained the most stable and attractive, with peak tenures surpassing those of 'Dedicated Desk' and 'Hot Desk' subscriptions, which displayed more erratic behaviors. The collective data points towards enhanced retention and longer commitments across all membership types, suggesting an industry-wide transition towards stability and increased member satisfaction.</p>
-
-<h3 class="heading4"></h3>
-<p>The Dedicated Desk and Part-time, although they seem to respond to different needs, in terms of permanence there is hardly more than 3 % difference between them.</p>
-<h3 class="heading4"></h3>
-<p>The Hot desk is the plan with the lowest permanence and traditionally low cost. However, it can be very attractive for operators operating in common areas.</p>
+<h3 class="heading4">How does the type of plan affect the permanence of members?</h3><p>The analysis of member tenure across various co-working space membership types reveals distinct patterns that tie directly to the nature of each plan. Office memberships boast the longest average tenure of approximately <strong>12 months</strong>, indicating that members value stability and a dedicated workspace considerably more than others. In stark contrast, Hot Desk members show the shortest average tenure of around <strong>7 months</strong>, reflective of their more transient engagement with the space, suggesting a lower commitment level and fewer ties to the community.</p><p>Interestingly, Virtual memberships record a surprising average tenure of about <strong>13 months</strong>, hinting at strong customer loyalty and the potential for meaningful interactions beyond physical presence. Overall, these findings underscore how the permanence associated with different membership types significantly affects member retention and engagement, with a clear correlation between the stability of the workspace and the duration of affiliation.</p>
 <div class="tab">
 <nav class="tab-nav">
 <ul>
@@ -269,11 +262,11 @@
 </figure>
 </div>
 </div>
-<h3 class="heading4">Evolution &amp;user behaviour in the flexible workspace industry</h3>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
+<h3 class="heading4">Evolution &amp;user behaviour in the flexible workspace industry</h3><p>The analysis reveals a significant upward trend in member tenure within the flexible workspace sector from early 2016 to 2025, with the average tenure increasing from approximately 5 months to a peak nearing 15 months in March 2023. The data indicates notable spikes, particularly during 2023, signifying shifts in member loyalty and usage patterns, likely influenced by the evolving nature of work post-pandemic. Though fluctuations remain present, the overall trajectory shows that member retention is steadily improving, indicating a structural change in workspace dynamics.</p><p>When dissecting individual membership types, a similar pattern emerges, with substantial spikes in tenure across categories in March 2023. Notably, 'Virtual' memberships remained the most stable and attractive, with peak tenures surpassing those of 'Dedicated Desk' and 'Hot Desk' subscriptions, which displayed more erratic behaviors. The collective data points towards enhanced retention and longer commitments across all membership types, suggesting an industry-wide transition towards stability and increased member satisfaction.</p>
+
+
+
+
 <div class="tab">
 <nav class="tab-nav">
 <ul>
