modify topic conclusion label

--- a/tenure_patterns.html
+++ b/tenure_patterns.html
@@ -540,10 +540,10 @@
 <div class="col-md-6 col-lg-7">
 <div class="texts-wrap">
 <p class="font-plaak color-orange">Conclusions</p>
-<h2 class="heading4"></h2>
-<p>If you want to improve your retention values you should concentrate on getting members on virtual and office plans. However, if your priority is members on Part-time, Dedicated Desk and Hot Desk rates, team members will offer you up to 16% longer tenure </p>
-<p>Globally, we have found that concentrating on attracting members aged 45+ will give you at least 20% more tenure than any other age group.</p>
-<p>Looking to the future, taking into account how the sector has evolved in recent years plus the impact of the pandemic which has accelerated the entry of new customers into the sector from a traditional model who have decided to migrate in search of flexibility at a time when uncertainty has increased, we believe that permanence will continue to increase unless some unexpected external factor impacts the industry globally.</p>
+<h2 class="heading4"></h2><p>The analysis of member tenure patterns within flexible workspaces reveals critical insights into the evolving dynamics of membership commitment. The notable difference in average tenure between 'Virtual' members at 13.4 months and 'Hot Desk' users at 6.7 months indicates a trend towards stability among those who opt for structured plans. The increase in average membership tenure from 5.73 months in 2016 to over 14 months in 2023 underscores a resurgence in retention post-pandemic, reflecting a shifting preference for stable work environments, particularly among older members who show the highest commitment levels.</p><p>Additionally, tenure metrics reveal that team memberships lead to longer engagement, averaging 10.31 months compared to freelancers, which suggests that collaborative work arrangements foster deeper loyalty. Notably, smaller coworking spaces yield higher retention rates, with members in environments of 0-40 exhibiting nearly 21 months of average tenure. In contrast, larger setups experience significant declines in member duration, indicating that the workspace size plays a crucial role in shaping member experiences and satisfaction. Overall, these findings illustrate the interconnectedness between membership type, age demographics, and workspace characteristics, highlighting a clear trend towards longer tenures among members who thrive in cohesive and formalized environments.</p>
+
+
+
 <a class="btn btn-orange btn" onclick="showPopup(event, '(English)','525cf6c3-35b3-4e7b-8ac0-f6ff1efddaf9')" title="Download bespoke report">
                             Download bespoke report <i class="icon icon-download"></i>
 </a>
